<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_300sdp"
    android:layout_margin="@dimen/_10sdp"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/om_kathom"
        android:id="@+id/circle_im_view"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/_5sdp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_25sdp"
        android:id="@+id/ringtone_name"
        android:layout_below="@+id/circle_im_view"
        android:layout_centerHorizontal="true"
        android:text="rington Name"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_music"
            android:src="@drawable/play"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:tooltipText="@string/play"
            android:layout_marginRight="@dimen/_50sdp"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/set_as_notification"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:src="@drawable/set_as_notification"
            android:layout_marginRight="@dimen/_50sdp"
            android:tooltipText="@string/set_as_notification"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/set_as_rington"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:src="@drawable/set_as_ringtone"
            android:tooltipText="@string/set_as_ringtone"
            />

    </LinearLayout>

</RelativeLayout>